--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1"
+    "mongoose": "^7.5.1",
+    "socket.io": "^4.7.2"
   }
 }
